# samnotator

./: .gitignore  LICENSE  README.md  pyproject.toml
models/: .gitignore
src/samnotator/: __init__.py  datamodel.py  main.py
src/samnotator/app/: __init__.py  app_controller.py  app_status.py  app_widget.py
src/samnotator/controllers/: annotations_controller.py  frame_controller.py  instance_controller.py  model_controller.py
src/samnotator/models/: interface.py  sam3.py  sam3_pvs_image.py  sam3_pvs_video.py  sam3_utils.py  torch_worker.py
src/samnotator/utils/: _CUD.py  __init__.py
src/samnotator/utils_qt/: colours.py  contextblock.py
src/samnotator/utils_qt/InputMappedMixin/: __init__.py  _basis.py  _mixin.py
src/samnotator/utils_qt/PixmapPatch/: __init__.py  _background.py  _fontsymbols.py
src/samnotator/widgets/aimodels/: modelrunner_widget.py
src/samnotator/widgets/annotator/: annotator_scene.py  annotator_view.py  annotator_widget.py  base.py  zoom.py
src/samnotator/widgets/annotator/items/: bbox.py  layer.py  qxitempoint.py
src/samnotator/widgets/instances/: delegates.py  instance_renderers.py  instance_table_model.py  instance_widget.py
