[project]
name = "samnotator"
version = "0.1.0"
description = "Qt application for creating annotations with SAM"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.6",
    "opencv-python-headless>=4.12.0.88",
    "pydantic>=2.11.9",
    "pyside6>=6.9.2",
]

[project.scripts]
samnotator = "samnotator:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
