[project]
name = "samnotator"
version = "0.1.0"
description = "Qt application for creating annotations with SAM"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "coloraide>=5.1",
    "numpy>=2.3.4",
    "opencv-python-headless>=4.11.0.86",
    "pydantic>=2.12.2",
    "pyside6>=6.10.0",
    "requests>=2.32.5",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "transformers",
]

[project.scripts]
samnotator = "samnotator:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
torch = [ { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }, ]
torchvision = [ { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }, ]
transformers = { git = "https://github.com/huggingface/transformers" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[dependency-groups]
dev = [
    "huggingface-hub>=0.36.0",
]
